<resources>
    <string name="app_name">MelodyCraft</string>
    <string name="home">Home</string>
    <string name="generate">Generate</string>
    <string name="player">Player</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="delete_user">Delete User</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="toggle_theme">Toggle Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_melody_text">Create beautiful melody in seconds</string>
    <string name="genre">Genre</string>
    <string name="primer_melodies">Primer Melodies</string>
    <string name="add_melody">Add Melody</string>
    <string name="backing_chords">Backing Chords</string>
    <string name="add_chord">Add Chord</string>
    <string name="duration">Duration</string>
    <string name="generate_music">Generate Music</string>
    <string name="melodycraft_banner">MelodyCraft Banner</string>
</resources>